--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
-    "@next/mdx": "^13.4.3",
-    "framer-motion": "^10.12.13",
+    "@next/mdx": "^13.4.4",
+    "framer-motion": "^10.12.16",
+    "gray-matter": "^4.0.3",
     "next": "13.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "rehype-highlight": "^6.0.0",
+    "remark-frontmatter": "^4.0.1",
     "styled-components": "^6.0.0-rc.1"
   }
 }
